--- a/style.css
+++ b/style.css
@@ -151,6 +151,10 @@ footer i {
     text-align: center;
     margin-top: 10px;
     background-color: #ff491ca4;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    
     
 }
 
