--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ footer i {
     margin-top: 20px;
 }
 
-.carouselContainer p {
+.carousel-caption p {
     color: rgb(255, 255, 255);
     font-family: "Open Sans", sans-serif;
     font-size: 2rem;
@@ -160,8 +160,9 @@ footer i {
 
 .carousel-item img {
 filter: grayscale(60%);
-    width: 100%;
-    height: auto;
+display: inline-block;
+
+    
 }
 
 
