--- a/style.css
+++ b/style.css
@@ -160,7 +160,10 @@ footer i {
 
 .carousel-item img {
 filter: grayscale(60%);
-display: inline-block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+
 
     
 }
