--- a/style.css
+++ b/style.css
@@ -143,6 +143,20 @@ footer i {
     margin-top: 20px;
 }
 
+.carousel-item {
+    height: 225px;
+    position: relative;
+}
+
+.carousel-caption {
+    width: 80%;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+}
 .carousel-caption p {
     color: rgb(255, 255, 255);
     font-family: "Open Sans", sans-serif;
@@ -161,7 +175,7 @@ footer i {
 .carousel-item img {
 filter: grayscale(60%);
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 
 
